<resources>
    <string name="app_name">Screentime Usability demo</string>
    <string name="brightness"><b>Brightness</b></string>
    <string name="volume"><b>Volume</b></string>
    <string name="dark_mode"><b>Dark Mode</b></string>
    <string name="color_mode"><b>Color Mode</b></string>
    <string name="animation_scale"><b>Animation Scale</b></string>
    <string name="wifi_usage"><b>Wifi Usage</b></string>
    <string name="blurring_window">Blurring Window</string>
    <string name="exit_blurring">Exit Blurring</string>
    <string name="vibrate">Vibrate</string>
    <string name="LED_flash">LED flash</string>
</resources>
